--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                <nav>
 
 	             <p>Copyright &copy; Fish Creek Animal Hospital</p>
-               <p><a href="mailto:june@yoshii.com">june@yoshii.com</a></p>
+               <p><a href="S1336153@mcckc.student.edu">Andrew Nave</a></p>
           </footer>
 
      </div>
